--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "samplesize",
+  "name": "@gabrielrufino/samplesize",
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
