--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/gabrielrufino/samplesize/issues"
   },
-  "homepage": "https://github.com/gabrielrufino/samplesize#readme"
+  "homepage": "https://github.com/gabrielrufino/samplesize#readme",
+  "devDependencies": {
+    "typescript": "^4.4.4"
+  }
 }
