--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gabrielrufino/samplesize",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "build/index.js",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
