--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "build/src/index.js",
   "scripts": {
     "build": "tsc -d",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
