--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^27.2.5",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.3.0",
+    "tslint": "^6.1.3",
     "typescript": "^4.4.4"
   }
 }
