--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,6 @@ jobs:
         node-version: 14
         cache: 'npm'
     - run: npm ci
+    - run: npm run lint
+    - run: npm run build
     - run: npm test
