--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/gabrielrufino/samplesize#readme",
   "devDependencies": {
+    "@stryker-mutator/core": "^6.2.2",
+    "@stryker-mutator/jest-runner": "^6.2.2",
     "@types/jest": "^29.0.0",
     "jest": "^28.1.3",
     "rimraf": "^3.0.2",
