--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@gabrielrufino/samplesize",
   "version": "1.0.9",
   "description": "Package to determine the correct sample size for a survey",
-  "main": "build/src/index.js",
+  "main": "build/index.js",
   "scripts": {
     "build": "tsc -d",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
