Run mutation tests after unit tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,8 @@ jobs:
       - run: npm test
   mutation-test:
     runs-on: ubuntu-latest
-
+    needs:
+      - test
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js 18
