--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,11 @@ jobs:
           node-version: 18
           cache: 'npm'
       - run: npm ci
-      - run: npm test
+      - run: npm run test:cov
+      - uses: actions/upload-artifact@v3
+        with:
+          name: coverage
+          path: coverage
   mutation-test:
     runs-on: ubuntu-latest
     needs:
