--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,8 @@
-name: Package Continuous Delivery
+name: CD
 
 on:
   workflow_run:
-    workflows: ['Package Continuous Integration']
+    workflows: ['CI']
     types:
       - completed
     branches:
