--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - test
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v4
         with:
