--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,48 +4,14 @@ on:
   - push
 
 jobs:
-  build:
+  node-ci:
+    name: Node CI
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build
-      - uses: actions/upload-artifact@v3
-        with:
-          name: build
-          path: build
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run lint
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run test:cov
-      - uses: actions/upload-artifact@v3
-        with:
-          name: coverage
-          path: coverage
+      - uses: gabrielrufino/node-ci@v1
   mutation-test:
     runs-on: ubuntu-latest
-    needs:
-      - test
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
@@ -59,8 +25,6 @@ jobs:
           path: reports
   sonarqube:
     runs-on: ubuntu-latest
-    needs:
-      - test
     continue-on-error: true
     steps:
       - uses: actions/checkout@v4
