--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "reinstall": "npx rimraf node_modules && npm ci",
     "test": "jest",
     "test:cov": "npm run test -- --coverage",
-    "test:mutation": "npx stryker run"
+    "test:mutation": "npx stryker run",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -23,9 +24,12 @@
   },
   "homepage": "https://github.com/gabrielrufino/samplesize#readme",
   "devDependencies": {
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
     "@stryker-mutator/core": "^6.4.2",
     "@stryker-mutator/jest-runner": "^6.4.2",
     "@types/jest": "^29.5.12",
+    "husky": "^9.0.11",
     "jest": "^28.1.3",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.8",
