--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,13 @@
-sonar.projectKey=gabrielrufino_samplesize_AYc-vzUOulJTZdj62AzO
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.projectKey=gabrielrufino_samplesize
+sonar.organization=gabrielrufino
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=samplesize
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
