--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,18 +10,11 @@ on:
 
 
 jobs:
-  ci:
-    name: CI
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    steps:
-      - run: exit 0
   delivery:
     name: Delivery
-    needs:
-      - ci
     runs-on: ubuntu-latest
     steps:
+      - uses: gabrielrufino/check-ci@main
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
