chore: using node-pkg-cd on CD

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,12 +16,6 @@ jobs:
     steps:
       - uses: gabrielrufino/check-ci@main
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - uses: gabrielrufino/node-pkg-cd@v1
         with:
-          node-version: 18
-          registry-url: 'https://registry.npmjs.org'
-      - run: npm ci
-      - run: npm run build
-      - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          node-auth-token: ${{ secrets.NPM_TOKEN }}
