--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,8 +14,8 @@ jobs:
     name: Delivery
     runs-on: ubuntu-latest
     steps:
-      - uses: gabrielrufino/check-ci@main
+      - uses: actalog/check-ci@main
       - uses: actions/checkout@v4
-      - uses: gabrielrufino/node-pkg-cd@v1
+      - uses: actalog/node-pkg-cd@v1
         with:
           node-auth-token: ${{ secrets.NPM_TOKEN }}
