--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "build": "tsc -d",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
-    "test": "jest",
+    "test": "vitest run",
     "test:cov": "npm run test -- --coverage",
     "test:mutation": "npx stryker run",
+    "test:watch": "vitest",
     "prepare": "husky"
   },
   "repository": {
@@ -25,14 +26,12 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@stryker-mutator/core": "^6.4.2",
-    "@stryker-mutator/jest-runner": "^6.4.2",
-    "@types/jest": "^29.5.14",
+    "@stryker-mutator/vitest-runner": "^8.7.1",
+    "@vitest/coverage-v8": "^2.1.8",
     "husky": "^9.1.7",
-    "jest": "^28.1.3",
-    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^2.1.8"
   }
 }
