--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-    "tests"
+    "**/*.spec.ts",
+    "**/*.test.ts",
   ]
 }
