--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=gabrielrufino_samplesize
 sonar.organization=gabrielrufino
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.coverage.exclusions=**/*.test.ts,**/*.spec.ts
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=samplesize
