--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Package to determine the correct sample size for a survey",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -d",
+    "build": "tsc",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "vitest run",
     "test:cov": "npm run test -- --coverage",
