--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "build:watch": "npm run build -- --watch",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "test": "vitest run",
     "test:cov": "npm run test -- --coverage",
