--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,12 +2,11 @@ name: CD
 
 on:
   workflow_run:
-    workflows: ['CI']
+    workflows: [CI]
     types:
       - completed
     branches:
       - main
-
 
 jobs:
   delivery:
