--- a/package.json
+++ b/package.json
@@ -2,36 +2,38 @@
   "name": "@gabrielrufino/samplesize",
   "version": "1.0.45",
   "description": "Package to determine the correct sample size for a survey",
+  "author": "Gabriel Rufino <contato@gabrielrufino.com>",
+  "license": "UNLICENSED",
+  "funding": "https://github.com/sponsors/gabrielrufino",
+  "homepage": "https://github.com/gabrielrufino/samplesize#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gabrielrufino/samplesize.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gabrielrufino/samplesize/issues"
+  },
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "build:watch": "npm run build -- --watch",
-    "lint": "tslint -c tslint.json 'src/**/*.ts'",
+    "lint": "eslint",
+    "lint:fix": "npm run lint -- --fix",
     "test": "vitest run",
     "test:cov": "npm run test -- --coverage",
     "test:mutation": "npx stryker run",
     "test:watch": "vitest",
     "prepare": "husky"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gabrielrufino/samplesize.git"
-  },
-  "author": "Gabriel Rufino <contato@gabrielrufino.com>",
-  "funding": "https://github.com/sponsors/gabrielrufino",
-  "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/gabrielrufino/samplesize/issues"
-  },
-  "homepage": "https://github.com/gabrielrufino/samplesize#readme",
   "devDependencies": {
+    "@antfu/eslint-config": "^4.12.0",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@stryker-mutator/vitest-runner": "^8.7.1",
     "@vitest/coverage-v8": "^3.1.1",
+    "eslint": "^9.24.0",
     "husky": "^9.1.7",
     "ts-node": "^10.9.2",
-    "tslint": "^6.1.3",
     "typescript": "^4.9.5",
     "vitest": "^3.0.8"
   }
