--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   delivery:
     name: Delivery
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     steps:
       - uses: actalog/check-ci@main
       - uses: actions/checkout@v4
